Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -93,10 +93,8 @@ For the computations that are identical to the numerical linear algebra lirbary,
 <ul>
 <li>Released 15/6/2015 <a href="http://linalg.org/fflas-ffpack-2.1.0.tar.gz">fflas-ffpack-2.1.0.tar.gz</a>   <a href="http://linalg.org/fflas-ffpack-2.1.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-2.1.0">ChangeLog</a>
 </li>
-<li>Released 8/8/2014 <a href="http://linalg.org/fflas-ffpack-2.0.0.tar.gz">fflas-ffpackl-2.0.0.tar.gz</a> <a href="http://linalg.org/fflas-ffpack-2.0.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-2.0.0">ChangeLog</a> </li>
-</ul>
-
-<p>||Released 7/6/2012||[<a href="http://linalg.org/fflas-ffpack-1.6.0.tar.gz">http://linalg.org/fflas-ffpack-1.6.0.tar.gz</a> fflas-ffpack-1.6.0.tar.gz] || [<a href="http://linalg.org/fflas-ffpack-1.6.0.tar.gz.md5sum">http://linalg.org/fflas-ffpack-1.6.0.tar.gz.md5sum</a> md5sum]|| [<a href="http://linalg.org/fflas-ffpack-ChangeLog-1.6.0">http://linalg.org/fflas-ffpack-ChangeLog-1.6.0</a> ChangeLog] ||
+<li>Released 08/08/2014 <a href="http://linalg.org/fflas-ffpack-2.0.0.tar.gz">fflas-ffpackl-2.0.0.tar.gz</a> <a href="http://linalg.org/fflas-ffpack-2.0.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-2.0.0">ChangeLog</a> </li>
+<li>Released 07/06/2012 <a href="http://linalg.org/fflas-ffpack-1.6.0.tar.gz">fflas-ffpack-1.6.0.tar.gz</a> <a href="http://linalg.org/fflas-ffpack-1.6.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-1.6.0">ChangeLog</a>
 ||Released 16/05/2012||[<a href="http://linalg.org/fflas-ffpack-1.5.0.tar.gz">http://linalg.org/fflas-ffpack-1.5.0.tar.gz</a> fflas-ffpack-1.5.0.tar.gz] ||[<a href="http://linalg.org/fflas-ffpack-1.5.0.tar.gz.md5sum">http://linalg.org/fflas-ffpack-1.5.0.tar.gz.md5sum</a> md5sum] || [<a href="http://linalg.org/fflas-ffpack-ChangeLog-1.5.0">http://linalg.org/fflas-ffpack-ChangeLog-1.5.0</a> ChangeLog] ||
 ||Released 10/10/2011||[<a href="http://linalg.org/fflas-ffpack-1.4.3.tar.gz">http://linalg.org/fflas-ffpack-1.4.3.tar.gz</a> fflas-ffpack-1.4.3.tar.gz] || [<a href="http://linalg.org/fflas-ffpack-1.4.3.tar.gz.md5sum">http://linalg.org/fflas-ffpack-1.4.3.tar.gz.md5sum</a> md5sum]|| [<a href="http://linalg.org/fflas-ffpack-ChangeLog-1.4.3">http://linalg.org/fflas-ffpack-ChangeLog-1.4.3</a> ChangeLog] ||
 ||Released 26/08/2011||[<a href="http://linalg.org/fflas-ffpack-1.4.2.tar.gz">http://linalg.org/fflas-ffpack-1.4.2.tar.gz</a> fflas-ffpack-1.4.2.tar.gz] ||[<a href="http://linalg.org/fflas-ffpack-1.4.2.tar.gz.md5sum">http://linalg.org/fflas-ffpack-1.4.2.tar.gz.md5sum</a> md5sum] || [<a href="http://linalg.org/fflas-ffpack-ChangeLog-1.4.2">http://linalg.org/fflas-ffpack-ChangeLog-1.4.2</a> ChangeLog] ||
@@ -106,7 +104,8 @@ For the computations that are identical to the numerical linear algebra lirbary,
 ||Released 28/09/2007||[<a href="http://linalg.org/fflas-ffpack-1.3.2.tar.gz">http://linalg.org/fflas-ffpack-1.3.2.tar.gz</a> fflas-ffpack-1.3.2.tar.gz] ||[<a href="http://linalg.org/fflas-ffpack-1.3.2.tar.gz.md5sum">http://linalg.org/fflas-ffpack-1.3.2.tar.gz.md5sum</a> md5sum] || [<a href="http://linalg.org/fflas-ffpack-ChangeLog-1.3.2">http://linalg.org/fflas-ffpack-ChangeLog-1.3.2</a> ChangeLog] ||
 ||Released 30/08/2007||[<a href="http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/fflas-ffpack-1.3.1.tar.gz">http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/fflas-ffpack-1.3.1.tar.gz</a> fflas-ffpack-1.3.1.tar.gz] || || [<a href="http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/ChangeLog-1.3.1">http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/ChangeLog-1.3.1</a> ChangeLog] ||
 ||Released 28/08/2007||[<a href="http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/fflas-ffpack-1.3.0.tar.gz">http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/fflas-ffpack-1.3.0.tar.gz</a> fflas-ffpack-1.3.0.tar.gz] || || [<a href="http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/ChangeLog-1.3.0">http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/ChangeLog-1.3.0</a> ChangeLog] ||
-||Released 09/07/2007||[<a href="http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/fflas-ffpack-1.2.2.tar.gz">http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/fflas-ffpack-1.2.2.tar.gz</a> fflas-ffpack-1.2.2.tar.gz] || || [<a href="http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/ChangeLog-1.2.2">http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/ChangeLog-1.2.2</a> ChangeLog] ||</p>
+||Released 09/07/2007||[<a href="http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/fflas-ffpack-1.2.2.tar.gz">http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/fflas-ffpack-1.2.2.tar.gz</a> fflas-ffpack-1.2.2.tar.gz] || || [<a href="http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/ChangeLog-1.2.2">http://ljk.imag.fr/membres/Jean-Guillaume.Dumas/FFLAS/FFLAS_Download/ChangeLog-1.2.2</a> ChangeLog] ||</li>
+</ul>
 
 <p>You can also use clone the developer version on github: <a href="http://github.com/linbox-team/fflas-ffpack">http://github.com/linbox-team/fflas-ffpack</a></p>
 
@@ -116,7 +115,7 @@ For the computations that are identical to the numerical linear algebra lirbary,
 <p>FFLAS-FFPACK depends on:</p>
 
 <ul>
-<li>the Givaro library &lt;&gt; for the implementations of finite fields, and a wrapping of <a href="https://gmplib.org">GMP</a> multiprecision integers;</li>
+<li>the <a href="https://github.com/linbox-team/givaro">Givaro</a> library for the implementations of finite fields, and a wrapping of <a href="https://gmplib.org">GMP</a> multiprecision integers;</li>
 <li>any implementation of a numerical BLAS library. We suggest using <a href="http://www.openblas.net">OpenBLAS</a> on most of nowadays computers.</li>
 </ul>
 
