Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ It is inspired by the BLAS interface (Basic Linear Algebra Subprograms) and the 
 <li>
 <code>fgemm</code> : for the matrix multiplication of the form ̀ C = alpha . A x B + beta . C`</li>
 <li>
-<code>ftrsm</code> : for the triangular system solving with matrix right/left hand side: solving ̀ U x X = B` for an unknown matrix X.</li>
+<code>ftrsm</code> : for the triangular system solving with matrix right/left hand side: solving ̀<code>U x X = B</code> for an unknown matrix X.</li>
 <li>
-<code>ftrmm</code> : for the multiplication of a triangular matrix with a rectangular matrix. <code>X = U x B</code>
+<code>ftrmm</code> : for the multiplication of a triangular matrix with a rectangular matrix. <code>X= U x B</code>
 </li>
 <li>
 <code>fger</code> : for the outer product of two vectors: <code>A = u x v^T + A</code>
