Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@ It is inspired by the BLAS interface (Basic Linear Algebra Subprograms) and the 
 <h2>
 <a id="fflas" class="anchor" href="#fflas" aria-hidden="true"><span class="octicon octicon-link"></span></a>FFLAS</h2>
 
-<p>FFLAS (Finite Field Linear Algebra Subprograms) provides the implementation of a subset of routines of the numerical BLAS, with the prefix letter `f standing for finite field.</p>
+<p>FFLAS (Finite Field Linear Algebra Subprograms) provides the implementation of a subset of routines of the numerical BLAS, with the prefix letter <code>f</code> standing for finite field.</p>
 
 <ul>
 <li>
-<code>fgemm</code> : for the matrix multiplication of the form ̀ C = alpha . A x B + beta . C`</li>
+<code>fgemm</code> : for the matrix multiplication of the form ̀  <code>C = alpha . A x B + beta . C</code>
+</li>
 <li>
-<code>ftrsm</code> : for the triangular system solving with matrix right/left hand side: solving ̀<code>U x X = B</code> for an unknown matrix X.</li>
+<code>ftrsm</code> : for the triangular system solving with matrix right/left hand side: solving ̀ <code>U x X = B</code> for an unknown matrix X.</li>
 <li>
 <code>ftrmm</code> : for the multiplication of a triangular matrix with a rectangular matrix. <code>X= U x B</code>
 </li>
