--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ It is inspired by the BLAS interface (Basic Linear Algebra Subprograms) and the 
 
 <ul>
 <li>
-<code>fgemm</code> : for the matrix multiplication of the form ̀  <code>C = alpha . A x B + beta . C</code>
+<code>fgemm</code> : for the matrix multiplication of the form  <code>C = alpha . A x B + beta . C</code>
 </li>
 <li>
-<code>ftrsm</code> : for the triangular system solving with matrix right/left hand side: solving ̀ <code>U x X = B</code> for an unknown matrix X.</li>
+<code>ftrsm</code> : for the triangular system solving with matrix right/left hand side: solving <code>U x X = B</code> for an unknown matrix X.</li>
 <li>
 <code>ftrmm</code> : for the multiplication of a triangular matrix with a rectangular matrix. <code>X= U x B</code>
 </li>
