--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@ For the computations that are identical to the numerical linear algebra lirbary,
 <a id="downloads" class="anchor" href="#downloads" aria-hidden="true"><span class="octicon octicon-link"></span></a>Downloads</h2>
 
 <ul>
-<li>Released 15/6/2015 <a href="http://linalg.org/fflas-ffpack-2.1.0.tar.gz">fflas-ffpack-2.1.0.tar.gz</a>   <a href="http://linalg.org/fflas-ffpack-2.1.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-2.1.0">ChangeLog</a>
+<li>Released 24/02/2016 <a href="https://github.com/linbox-team/fflas-ffpack/releases">fflas-ffpack-2.2.0</a> </li>
+<li>Released 15/06/2015 <a href="http://linalg.org/fflas-ffpack-2.1.0.tar.gz">fflas-ffpack-2.1.0.tar.gz</a>   <a href="http://linalg.org/fflas-ffpack-2.1.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-2.1.0">ChangeLog</a>
 </li>
 <li>Released 08/08/2014 <a href="http://linalg.org/fflas-ffpack-2.0.0.tar.gz">fflas-ffpackl-2.0.0.tar.gz</a> <a href="http://linalg.org/fflas-ffpack-2.0.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-2.0.0">ChangeLog</a> </li>
 <li>Released 07/06/2012 <a href="http://linalg.org/fflas-ffpack-1.6.0.tar.gz">fflas-ffpack-1.6.0.tar.gz</a> <a href="http://linalg.org/fflas-ffpack-1.6.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-1.6.0">ChangeLog</a>
