Fix link and add versions 2.2.1 and 2.2.2

--- a/index.html
+++ b/index.html
@@ -92,13 +92,15 @@ For the computations that are identical to the numerical linear algebra lirbary,
 <a id="downloads" class="anchor" href="#downloads" aria-hidden="true"><span class="octicon octicon-link"></span></a>Downloads</h2>
 
 <ul>
-<li>Released 24/02/2016 <a href="https://github.com/linbox-team/fflas-ffpack/releases">fflas-ffpack-2.2.0</a> </li>
+<li>Released 30/07/2016 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.2.2">fflas-ffpack-2.2.2</a> </li>
+<li>Released 08/04/2016 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.2.1">fflas-ffpack-2.2.1</a> </li>
+<li>Released 24/02/2016 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.2.0">fflas-ffpack-2.2.0</a> </li>
 <li>Released 15/06/2015 <a href="http://linalg.org/fflas-ffpack-2.1.0.tar.gz">fflas-ffpack-2.1.0.tar.gz</a>   <a href="http://linalg.org/fflas-ffpack-2.1.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-2.1.0">ChangeLog</a>
 </li>
 <li>Released 08/08/2014 <a href="http://linalg.org/fflas-ffpack-2.0.0.tar.gz">fflas-ffpackl-2.0.0.tar.gz</a> <a href="http://linalg.org/fflas-ffpack-2.0.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-2.0.0">ChangeLog</a> </li>
 <li>Released 07/06/2012 <a href="http://linalg.org/fflas-ffpack-1.6.0.tar.gz">fflas-ffpack-1.6.0.tar.gz</a> <a href="http://linalg.org/fflas-ffpack-1.6.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-1.6.0">ChangeLog</a>
 </li>
-<li>Released 16/05/2012 [fflas-ffpack-1.5.0.tar.gz]](<a href="http://linalg.org/fflas-ffpack-1.5.0.tar.gz">http://linalg.org/fflas-ffpack-1.5.0.tar.gz</a>) <a href="http://linalg.org/fflas-ffpack-1.5.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-1.5.0">ChangeLog</a>
+<li>Released 16/05/2012 <a href="http://linalg.org/fflas-ffpack-1.5.0.tar.gz">flas-ffpack-1.5.0.tar.gz</a> <a href="http://linalg.org/fflas-ffpack-1.5.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-1.5.0">ChangeLog</a>
 </li>
 <li>Released 10/10/2011 <a href="http://linalg.org/fflas-ffpack-1.4.3.tar.gz">fflas-ffpack-1.4.3.tar.gz</a> <a href="http://linalg.org/fflas-ffpack-1.4.3.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-1.4.3">ChangeLog</a>
 </li>
