--- a/index.html
+++ b/index.html
@@ -92,9 +92,16 @@ For the computations that are identical to the numerical linear algebra lirbary,
 <a id="downloads" class="anchor" href="#downloads" aria-hidden="true"><span class="octicon octicon-link"></span></a>Downloads</h2>
 
 <ul>
+<li>Released 11/06/2019 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/2.4.3">fflas-ffpack-2.4.3</a> </li>
+<!--li>Released 11/06/2019 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.4.2">fflas-ffpack-2.4.2</a> </li-->
+<!--li>Released 07/06/2019 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.4.1">fflas-ffpack-2.4.1</a> </li-->
+<!--li>Released 10/05/2019 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.4.0">fflas-ffpack-2.4.0</a> </li-->
+<li>Released 21/12/2017 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.3.2">fflas-ffpack-2.3.2</a> </li>
+<!--li>Released 23/11/2017 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.3.1">fflas-ffpack-2.3.1</a> </li-->
+<!--li>Released 17/11/2017 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.3.0">fflas-ffpack-2.3.0</a> </li-->
 <li>Released 30/07/2016 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.2.2">fflas-ffpack-2.2.2</a> </li>
-<li>Released 08/04/2016 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.2.1">fflas-ffpack-2.2.1</a> </li>
-<li>Released 24/02/2016 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.2.0">fflas-ffpack-2.2.0</a> </li>
+<!--li>Released 08/04/2016 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.2.1">fflas-ffpack-2.2.1</a> </li-->
+<!--li>Released 24/02/2016 <a href="https://github.com/linbox-team/fflas-ffpack/releases/tag/v2.2.0">fflas-ffpack-2.2.0</a> </li-->
 <li>Released 15/06/2015 <a href="http://linalg.org/fflas-ffpack-2.1.0.tar.gz">fflas-ffpack-2.1.0.tar.gz</a>   <a href="http://linalg.org/fflas-ffpack-2.1.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-2.1.0">ChangeLog</a>
 </li>
 <li>Released 08/08/2014 <a href="http://linalg.org/fflas-ffpack-2.0.0.tar.gz">fflas-ffpackl-2.0.0.tar.gz</a> <a href="http://linalg.org/fflas-ffpack-2.0.0.tar.gz.md5sum">md5sum</a> <a href="http://linalg.org/fflas-ffpack-ChangeLog-2.0.0">ChangeLog</a> </li>
